fix(Footer): fixed brief our AI agent width and spacing

--- a/app/assets/styles/main.scss
+++ b/app/assets/styles/main.scss
@@ -15,6 +15,10 @@ body {
   // padding: 0 clamp(88px, 8vw, 160px);
   padding: 0 160px;
   margin: 0 auto;
+  @include respond(portrait) {
+    padding-left: 48px;
+    padding-right: 48px;
+  }
   @include respond(mobile) {
     padding-left: 24px;
     padding-right: 24px;
